--- a/quiz-authoring-tool/package.json
+++ b/quiz-authoring-tool/package.json
@@ -1,19 +1,23 @@
 {
   "name": "quiz-authoring-tool",
   "version": "0.1.0",
+  "homepage": "https://ksharish72.github.io/Quiz-Authoring-Tool",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0",
-    "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
   "scripts": {
+    "deploy": "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
